--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.8",
+    "@apollo/experimental-nextjs-app-support": "^0.11.3",
     "@nextui-org/react": "^2.4.7",
+    "@types/graphql": "^14.5.0",
+    "graphql": "^16.9.0",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
