--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/react": "^2.4.7",
     "@types/graphql": "^14.5.0",
     "graphql": "^16.9.0",
+    "gsap": "^3.12.5",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
